--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://www.ogustavo.com.br/'
+baseURL = 'https://gustoliveira.github.io/personal-site/'
 languageCode = 'en-us'
 title = 'Gustavo de Oliveira Ferreira'
 
