Add css style to tables and highlight.js to code

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,4 +9,5 @@ theme = 'blank'
     [markup.goldmark.parser]
       [markup.goldmark.parser.attribute]
         block = true
+        title = true
 
