--- a/hugo.toml
+++ b/hugo.toml
@@ -6,6 +6,12 @@ theme = 'blank'
 
 [markup]
   [markup.goldmark]
+    [markup.goldmark.extensions]
+      [markup.goldmark.extensions.passthrough]
+        enable = true
+        [markup.goldmark.extensions.passthrough.delimiters]
+          block = [['\[', '\]'], ['$$', '$$']]
+          inline = [['\(', '\)']]
     [markup.goldmark.parser]
       [markup.goldmark.parser.attribute]
         block = true
